<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/news_list_umbrella"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/first_line"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:id="@+id/news_title"
            android:text="@string/here_comes_news_json"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/second_line"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/news_date"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/here_comes_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author_text"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/here_comes_author"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/news_type"
            android:layout_weight="1"
            android:text="@string/here_comes_news_type"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/third_line"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/news_summary"
            android:textColor="#000000"
            android:text="@string/here_comes_summary"/>
    </LinearLayout>
</LinearLayout>
